# opentitan-provisioning

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  apt-requirements.txt  go.mod  go.sum  run_integration_tests.sh  setup.sh
config/: BUILD.bazel  deploy.sh  token_init.sh
config/certs/: BUILD.bazel  gen_certs.sh
config/certs/templates/: ca.cnf  endpoint_ate-client.cnf.tmpl  endpoint_pa-service.cnf.tmpl  endpoint_pb-service.cnf.tmpl  endpoint_spm-service.cnf.tmpl
config/containers/: BUILD.bazel  provapp.service  provapp.yml.tmpl  registry_config.json.tmpl
config/dev/: BUILD.bazel  deploy.sh  token_init.sh
config/dev/certs/: gen_certs.sh
config/dev/certs/templates/: endpoint_ate-client.cnf.tmpl  endpoint_pa-service.cnf  endpoint_pa-service.cnf.tmpl  endpoint_pb-service.cnf.tmpl  endpoint_spm-service.cnf.tmpl
config/dev/containers/: nginx.conf  provapp.yml  provapp.yml.tmpl
config/dev/env/: spm.env  spm.yml
config/dev/softhsm/: init.sh
config/dev/spm/: sku_auth.yml  sku_cr01.yml  sku_pi01.yml  sku_sival.yml  sku_ti01.yml  sku_tpm_1.yml  sku_tpm_2.yml
config/dev/spm/certs/: TPMEkEccCertTemplate.cer  TPMEkRsaCertTemplate.cer
config/dev/spm/sku/: .gitignore  BUILD.bazel  hsm_spm_init.hjson  hsm_spm_init.sh
config/dev/spm/sku/eg/common/: BUILD.bazel
config/dev/spm/sku/eg/cr/: BUILD.bazel
config/dev/spm/sku/eg/pi/: BUILD.bazel
config/dev/spm/sku/eg/ti/: BUILD.bazel
config/dev/spm/sku/sival/: 01.hsm_offline.hjson  02.hsm_spm.hjson  BUILD.bazel  ca_int_dice.conf  hsm_offline_init.sh  hsm_sku_init.sh  hsm_spm_init.sh  import.hjson  init.hjson
config/dev/spm/sku/tpm_1/: hsm_sku_init.sh  init.hjson
config/env/dev/: BUILD.bazel  spm.env  spm.yml
config/env/prod/: spm.env
config/prod/: BUILD.bazel  deploy.sh
config/prod/certs/: gen_certs.sh
config/prod/certs/templates/: ca.cnf  endpoint_ate-client.cnf.tmpl  endpoint_pa-service.cnf.tmpl  endpoint_pb-service.cnf.tmpl  endpoint_spm-service.cnf.tmpl
config/prod/containers/: provapp.yml  provapp.yml.tmpl
config/prod/env/: spm.env  spm.yml
config/prod/spm/: sku_auth.yml  sku_cr01.yml  sku_pi01.yml  sku_sival.yml  sku_ti01.yml
config/prod/spm/sku/: BUILD.bazel  hsm_spm_init.hjson
config/prod/spm/sku/eg/: BUILD.bazel
config/prod/spm/sku/eg/common/: BUILD.bazel
config/prod/spm/sku/eg/cr/: BUILD.bazel
config/prod/spm/sku/eg/pi/: BUILD.bazel
config/prod/spm/sku/eg/ti/: BUILD.bazel
config/prod/spm/sku/sival/: 01.hsm_offline.hjson  02.hsm_spm.hjson  BUILD.bazel  hsm_sku_init.sh
config/softhsm/: BUILD.bazel  init.sh
config/spm/: BUILD.bazel  sku_auth.yml.tmpl  sku_cr01.yml.tmpl  sku_pi01.yml.tmpl  sku_sival.yml.tmpl  sku_ti01.yml.tmpl
config/spm/sku/: BUILD.bazel
config/spm/sku/eg/: BUILD.bazel
config/spm/sku/eg/common/: BUILD.bazel  ca_root.conf  pi01_ca_root.conf
config/spm/sku/eg/cr/: BUILD.bazel
config/spm/sku/eg/pi/: BUILD.bazel  ca_int_dice.conf
config/spm/sku/eg/ti/: BUILD.bazel
config/spm/sku/sival/: BUILD.bazel
docs/: Home.md  KeyPolicies.md  README.md  _Sidebar.md  ate.md  auth.md  containers.md  contributing.md  deployment.md  hsm.md  pa.md  spm.md
quality/: BUILD.bazel
release/: BUILD.bazel
rules/: BUILD.bazel  env.bzl  hsm.bzl  hsmtool.bzl  quality.bzl  util.bzl  vendor.bzl
src/ate/: BUILD.bazel  ate_api.h  ate_api_json_commands.cc  ate_api_json_commands_test.cc  ate_client.cc  ate_client.h  ate_client_test.cc  ate_dll.cc  ate_main.cc  ate_perso_blob.cc  ate_perso_blob.h  ate_perso_blob_test.cc  perso_blob.go  perso_blob_test.go  version.rc
src/ate/proto/: BUILD  dut_commands.proto
src/ate/test_programs/: BUILD.bazel  cp.cc  ft.cc
src/ate/test_programs/dut_lib/: BUILD.bazel  dut_lib.cc  dut_lib.h
src/ate/test_programs/otlib_wrapper/: BUILD.bazel
src/ate/test_programs/otlib_wrapper/src/: lib.rs
src/ate/testutils/: BUILD  dututils.go
src/cert/: BUILD.bazel  signer.go
src/cert/templates/: BUILD.bazel  tpm.go  tpm_test.go
src/cert/templates/testdata/: tpm_rsa_ca_cert.pem  tpm_rsa_ca_key.pem  tpm_rsa_device_cert.pem  tpm_rsa_device_key.pem  tpm_rsa_device_key.pub.pem
src/logger/: BUILD.bazel  logger.go  logger_interface.go  logger_test.go
src/pa/: BUILD.bazel  loadtest.go  pa_server.go
src/pa/proto/: BUILD.bazel  pa.proto
src/pa/services/: BUILD.bazel  pa.go  pa_test.go
src/pa/services/registry_shim/: BUILD.bazel  registry_shim.go
src/pk11/: BUILD.bazel  aes.go  aes_test.go  dump.go  ecdsa.go  ecdsa_test.go  gensec.go  hkdf_test.go  kdf.go  kwp_test.go  native.go  object.go  pk11.go  pk11_test.go  rsa.go  rsa_test.go  test_support.go
src/pk11/tool/: BUILD.bazel  commands.go  commands_aes.go  commands_basic.go  commands_crypto.go  commands_ecdsa.go  commands_pk11.go  commands_rsa.go  commands_test.go  example-script.txt  lex.go  lex_test.go  tool.go
src/proxy_buffer/proto/: BUILD.bazel  proxy_buffer.proto  validators.go  validators_test.go
src/proxy_buffer/services/: BUILD.bazel  http_registry.go  http_registry_test.go  proxybuffer.go  proxybuffer_test.go
src/proxy_buffer/store/: BUILD.bazel  connector.go  db.go  db_fake.go  db_test.go  etcd.go  etcd_test.go  filedb.go  filedb_test.go
src/proxy_buffer/syncer/: BUILD.bazel  syncer.go  syncer_test.go
src/registry_buffer/proto/: BUILD.bazel  registry_buffer.proto
src/spm/: BUILD.bazel  spm_server.go  spmutil.go
src/spm/proto/: BUILD.bazel  spm.proto
src/spm/services/: BUILD.bazel  certloader.go  se.go  se_pk11.go  se_pk11_test.go  skucfg.go  spm.go
src/spm/services/skumgr/: BUILD.bazel  skumgr.go
src/spm/services/testdata/: README.md  tbs.der
src/spm/services/testutils/: BUILD.bazel  tbsgen.go
src/spm/util/: BUILD.bazel  certgen.go
src/testing/: BUILD.bazel  test_helpers.h
src/testing/fake_registry/: BUILD.bazel  README.md  fake_registry.go
src/utils/: BUILD.bazel  devid.go  devid_test.go  utils.go
src/version/: BUILD.bazel  buildver.go  buildver_test.go  version.cc  version.h  version_linkstamp.cc  version_test.cc
util/: BUILD.bazel  fix_include_guard.py  (+3 more)
util/rr_parser/: BUILD.bazel  rr_parser.go
(+54 files in other folders)
