# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "nogo")

exports_files([
    "WORKSPACE",
])

config_setting(
    name = "windows",
    constraint_values = [
        "@platforms//os:windows",
    ],
)

nogo(
    name = "vet",
    vet = True,
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/lowRISC/opentitan-provisioning
gazelle(name = "gazelle")

# Use this rule to update Go dependencies.
#
# Note: Gazelle really likes to mess with WORKSPACE, even though
# we'd like for it not too. Make sure to run git restore WORKSPACE
# after this rule.
gazelle(
    name = "update-go-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=third_party/go/deps.bzl%go_packages_",
        "--build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)
