# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "deploy_script",
    srcs = [
        ":deploy.sh",
        ":token_init.sh",
    ],
)

pkg_tar(
    name = "release",
    srcs = [
        ":deploy_script",
        "//config/certs",
        "//config/containers",
        "//config/env/dev:env",
        "//config/env/prod:env",
        "//config/softhsm:release",
        "//config/spm:release",
    ],
    out = "config.tar.gz",
    include_runfiles = True,
    strip_prefix = "config",
)
