# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@bazelbuild_buildtools//buildifier:def.bzl", "buildifier", "buildifier_test")
load("@lowrisc_misc_linters//rules:rules.bzl", "licence_check")
load("//rules:quality.bzl", "clang_format_check", "gofmt")

package(default_visibility = ["//visibility:public"])

################################################################################
# Bazel BUILD file lint/formatting
################################################################################
buildifier_exclude = [
    "./WORKSPACE",  # Prevent Buildifier from inserting unnecessary newlines.
]

buildifier(
    name = "buildifier_fix",
    exclude_patterns = buildifier_exclude,
)

buildifier_test(
    name = "buildifier_check",
    diff_command = "diff -u",
    exclude_patterns = buildifier_exclude,
    mode = "diff",
    no_sandbox = True,
    verbose = True,
    workspace = "//:WORKSPACE",
)

################################################################################
# C/C++ lint/formatting.
################################################################################
clang_format_check(
    name = "check_clang_format",
    exclude_patterns = [
        # Vendored source code dirs
        "./**/third_party/**",
    ],
    mode = "diff",
)

clang_format_check(
    name = "clang_format",
    exclude_patterns = [
        # Vendored source code dirs
        "./**/third_party/**",
    ],
    mode = "fix",
)

################################################################################
# Go lint/format.
################################################################################
gofmt(
    name = "check_gofmt",
    mode = "diff",
)

gofmt(
    name = "gofmt",
    mode = "fix",
)

################################################################################
# License header check.
################################################################################
licence_check(
    name = "licence-check",
    exclude_patterns = [
        # Uncommented formats.
        "*.md",
        "*.json",
        ".gitignore",
        "**/.gitignore",
        "src/registry_service/*.go",
        "src/registry_upload/*.go",
        "src/registry_buffer/*.go",
        "src/manifest_reporting/*.go",
        "src/registry_service/*.proto",
        "src/registry_buffer/*.proto",
        "src/manifest_reporting/*.proto",
        "src/manifest_reporting/*.bazel",
        "src/test_service/store/mysql.go",
        "src/test_service/store/connector.go",
        "src/test_service/ts_client.go",
        "src/test_service/store/db.go",
        "src/test_service/services/testservice.go",
        "src/message_service/*.*",
        "src/message_client/*.*",
        ".github/CODEOWNERS",

        # Copyright-related files that don"t need a header.
        "CLA",
        "LICENSE",
    ],
    licence = """
    Copyright lowRISC contributors (OpenTitan project).
    Licensed under the Apache License, Version 2.0, see LICENSE for details.
    SPDX-License-Identifier: Apache-2.0
    """,
)
