# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@lowrisc_misc_linters//rules:rules.bzl", "licence_test")
load("@bazelbuild_buildtools//buildifier:def.bzl", "buildifier", "buildifier_test")
load(
    "//rules:quality.bzl",
    "clang_format_check",
    "clang_format_fix",
    "gofmt_check",
    "gofmt_fix",
    "include_guard_check",
    "include_guard_fix",
    "protolint_check",
    "protolint_fix",
)

package(default_visibility = ["//visibility:public"])

################################################################################
# Bazel BUILD file lint/formatting
################################################################################
buildifier_exclude = [
    "./WORKSPACE",  # Prevent Buildifier from inserting unnecessary newlines.
]

buildifier_test(
    name = "buildifier_check",
    diff_command = "diff -u",
    exclude_patterns = buildifier_exclude,
    mode = "diff",
    no_sandbox = True,
    tags = ["lint"],
    verbose = True,
    workspace = "//:WORKSPACE",
)

buildifier(
    name = "buildifier_fix",
    exclude_patterns = buildifier_exclude,
)

################################################################################
# C/C++ lint/formatting.
################################################################################
clang_format_exclude = [
    # Vendored source code dirs
    "./**/vendor/**",
]

clang_format_check(
    name = "clang_format_check",
    exclude_patterns = clang_format_exclude,
    mode = "diff",
    tags = ["lint"],
    workspace = "//:WORKSPACE",
)

clang_format_fix(
    name = "clang_format_fix",
    exclude_patterns = clang_format_exclude,
    mode = "fix",
)

################################################################################
# Go lint/format.
################################################################################
gofmt_check(
    name = "gofmt_check",
    mode = "diff",
    tags = ["lint"],
    workspace = "//:WORKSPACE",
)

gofmt_fix(
    name = "gofmt_fix",
    mode = "fix",
)

################################################################################
# Include guard lint/formatting.
################################################################################
include_guard_check(
    name = "include_guard_check",
    mode = "diff",
    tags = ["lint"],
    workspace = "//:WORKSPACE",
)

include_guard_fix(
    name = "include_guard_fix",
    mode = "fix",
)

################################################################################
# License header check.
################################################################################
licence_test(
    name = "license_check",
    exclude_patterns = [
        # Uncommented formats.
        "*.md",
        "*.json",
        ".gitignore",
        "**/.gitignore",
        ".github/CODEOWNERS",

        # Copyright-related files that don"t need a header.
        "CLA",
        "LICENSE",
    ],
    licence = """
    Copyright lowRISC contributors (OpenTitan project).
    Licensed under the Apache License, Version 2.0, see LICENSE for details.
    SPDX-License-Identifier: Apache-2.0
    """,
    tags = ["lint"],
    workspace = "//:WORKSPACE",
)

################################################################################
# Proto lint/format.
################################################################################
protolint_check(
    name = "protolint_check",
    mode = "diff",
    tags = ["lint"],
    workspace = "//:WORKSPACE",
)

protolint_fix(
    name = "protolint_fix",
    mode = "fix",
)
