# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

filegroup(
    name = "certs",
    srcs = [
        "gen_certs.sh",
        "templates/ca.cnf",
        "templates/endpoint_ate-client.cnf.tmpl",
        "templates/endpoint_pa-service.cnf.tmpl",
        "templates/endpoint_pb-service.cnf.tmpl",
        "templates/endpoint_spm-service.cnf.tmpl",
    ],
    visibility = ["//visibility:public"],
)
