# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

filegroup(
    name = "containers",
    srcs = [
        "provapp.service",
        "provapp.yml.tmpl",
        "registry_config.json.tmpl",
    ],
    visibility = ["//visibility:public"],
)
