# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "deploy_config",
    srcs = glob(
        [
            "env/**",
            "certs/**",
            "containers/**",
            "softhsm/**",
            "spm/**",
        ],
        [
            "certs/out/**",
            "certs/.gitignore",
        ],
    ),
)
