# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@crt//rules:pkg_win.bzl", "pkg_win")

package(default_visibility = ["//visibility:public"])

WINDOWS_LIBS = [
    "-lbcrypt",  # aka: bcrypt.lib
    "-ldbghelp",  # aka: dbghelp.lib
    "-lws2_32",  # aka: ws2_32.lib
    "-lstdc++",  # Standard C++ library
]

cc_library(
    name = "ate_client",
    srcs = ["ate_client.cc"],
    hdrs = ["ate_client.h"],
    defines = ["BAZEL_BUILD"],
    linkopts = select({
        "//:windows": WINDOWS_LIBS,
        "//conditions:default": [],
    }),
    deps = [
        "//src/pa/proto:pa_cc_grpc",
        "//src/transport:service_credentials",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/memory",
    ],
)

cc_test(
    name = "ate_client_test",
    srcs = ["ate_client_test.cc"],
    deps = [
        ":ate_client",
        "//src/testing:test_helpers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "ate_lib",
    srcs = [
        "ate_api_json_commands.cc",
        "ate_dll.cc",
    ],
    hdrs = ["ate_api.h"],
    defines = ["BAZEL_BUILD"],
    linkopts = select({
        "//:windows": WINDOWS_LIBS,
        "//conditions:default": [],
    }),
    deps = [
        ":ate_client",
        "//src/ate/proto:dut_commands_cc_proto",
        "//src/pa/proto:pa_cc_grpc",
        "//src/proto/crypto:common_cc_proto",
        "//src/proto/crypto:ecdsa_cc_proto",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "ate_api_json_commands_test",
    srcs = ["ate_api_json_commands_test.cc"],
    deps = [
        ":ate_lib",
        "//src/testing:test_helpers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_binary(
    name = "ate",
    srcs = [
        "ate_api.h",
        "ate_api_json_commands.cc",
        "ate_dll.cc",
    ],
    linkopts = select({
        "//:windows": WINDOWS_LIBS,
        "//conditions:default": [],
    }),
    linkshared = True,
    target_compatible_with = [
        "@platforms//os:windows",
    ],
    deps = [
        ":ate_client",
        "//src/ate/proto:dut_commands_cc_proto",
        "//src/pa/proto:pa_cc_grpc",
        "//src/proto/crypto:common_cc_proto",
        "//src/proto/crypto:ecdsa_cc_proto",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

pkg_win(
    name = "windows",
    srcs = [
        ":ate",
    ],
    platform = "@crt//platforms/x86_32:win32",
)
