# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "logger",
    srcs = [
        "logger.go",
        "logger_interface.go",
    ],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/logger",
)

go_test(
    name = "logger_test",
    srcs = [
        "logger_test.go",
    ],
    embed = [":logger"],
)