# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "devid",
    srcs = ["devid.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/utils/devid",
    deps = [
        ":utils",
        "//src/proto:device_id_go_pb",
        "//src/proto:validators",
    ],
)

go_test(
    name = "devid_test",
    srcs = ["devid_test.go"],
    embed = [":devid"],
    deps = [
        "//src/proto:device_id_go_pb",
    ],
)

go_library(
    name = "utils",
    srcs = ["utils.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/utils",
    deps = [
        "//src/version:buildver",
        "@in_gopkg_yaml_v3//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)
