# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

cc_library(
  name = "version",
  hdrs = ["version.h"],
  srcs = ["version.cc"],
  linkstamp = "version_linkstamp.cc",
  deps = [
    "@com_google_absl//absl/strings",
  ],
)

cc_test(
    name = "version_test",
    srcs = ["version_test.cc"],
    deps = [
        ":version",
        "@com_google_googletest//:gtest_main",
    ],
    stamp =  -1,
)

go_library(
    name = "buildver",
    srcs = ["buildver.go"],
    importpath = "github.com/lowRISC/ot-provisioning/src/version/buildver",
    x_defs = {
        "BuildHost": "{BUILD_HOST}",
        "BuildUser": "{BUILD_USER}",
        "BuildTimestamp": "{BUILD_TIMESTAMP}",
        "BuildSCMRevision": "{BUILD_SCM_REVISION}",
        "BuildSCMStatus": "{BUILD_SCM_STATUS}",
    },
)

go_test(
    name = "buildver_test",
    srcs = ["buildver_test.go"],
    deps = [
        ":buildver",
    ],
)
