# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

exports_files(["spm.env"])

filegroup(
    name = "env",
    srcs = [
        "spm.env",
        "spm.yml",
    ],
    visibility = ["//visibility:public"],
)
