# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "lex",
    importpath = "github.com/lowRISC/ot-provisioning/src/pk11/tool/lex",
    srcs = ["lex.go"],
)

go_library(
    name = "commands",
    importpath = "github.com/lowRISC/ot-provisioning/src/pk11/tool/commands",
    srcs = [
        "commands.go",
        "commands_basic.go",
        "commands_pk11.go",
        "commands_crypto.go",
        "commands_aes.go",
        "commands_ecdsa.go",
        "commands_rsa.go",
    ],
    deps = [
        ":lex",
        "//src/pk11",
        "@com_github_miekg_pkcs11//:go_default_library",
    ],
)

go_test(
    name = "commands_test",
    srcs = ["commands_test.go"],
    embed = [":commands"],
    deps = [
        ":lex",
        "//src/pk11",
        "//src/pk11:test_support",
        "@io_bazel_rules_go//go/tools/bazel",
    ],
)

go_test(
    name = "lex_test",
    srcs = ["lex_test.go"],
    embed = [":lex"],
    deps = [
        "@com_github_google_go_cmp//cmp",
    ],
)

go_binary(
    name = "tool",
    srcs = ["tool.go"],
    data = ["@softhsm2//:softhsm2"],
    deps = [
        ":commands",
        ":lex",
        "//src/pk11",
        "//third_party/softhsm2:test_config",
        "@com_github_miekg_pkcs11//:go_default_library",
        "@io_bazel_rules_go//go/tools/bazel",
    ],
)
